--- a/login.html
+++ b/login.html
@@ -13,9 +13,9 @@
   </head>
   <body>
 
-    <li class="nav-item back text-center">
-      <a class="nav-link" href="index.html">Kembali</a>
-    </li>
+    <div>
+        <a class="btn btn-outline-primary my-3 mx-4" href="index.html" role="button">Kembali</a>
+      </div>
   
         <!-- main: start -->
         <main class="full-page">
@@ -24,16 +24,19 @@
                     <div class="col-12 col-lg-5">
                         <div class="card shadow rounded-4">
                             <div class="card-body">
-                                <h4 class="text-center mb-4">Login Admin</h4>
+                                <h4 class="text-center mb-4">Admin Login</h4>
                                 <hr>
                                 <form action="">
                                     <div class="mb-3">
-                                        <label for="inputEmail" class="form-label">Email Address</label>
-                                        <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
+                                        <label for="inputEmail" class="form-label">Alamat Email</label>
+                                        <input type="email" class="form-control" id="inputEmail" placeholder="nama@contoh.com">
                                     </div>
                                     <div class="mb-3">
-                                        <label for="inputPassword" class="form-label">Password</label>
-                                        <input type="password" class="form-control" id="inputPassword" placeholder="insert your password">
+                                        <label for="inputPassword" class="form-label">Kata Sandi</label>
+                                        <input type="password" class="form-control" id="inputPassword" placeholder="masukkan sandi Anda">
+                                    </div>
+                                    <div>
+                                        <p class="my-3">Belum punya akun? <a href="register.html">Daftar</a></p>
                                     </div>
                                     <div class="d-flex justify-content-center">
                                         <button class="btn btn-primary px-4">Login</button>
